fix layout issues

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -81,6 +81,13 @@ footer {
 
 /* miscellaneous */
 
+.sticky {
+  position: -webkit-sticky; /* Safari */
+  position: sticky;
+  top: 0;
+  margin-top: 56px;
+}
+
 .debug_dump {
   clear: both;
   float: left;
